<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/cancel"
        android:textColor="#1C1313"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/save"
        android:textColor="#1C1313"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/makeText"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ex_canon"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/makeText"
        app:layout_constraintStart_toStartOf="@+id/makeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/focalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/focal_length_mm"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/focalLengthText"
        app:layout_constraintStart_toStartOf="@+id/focalLengthText" />

    <EditText
        android:id="@+id/focalLengthText"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/ex_200_for_200mm"
        android:inputType="number"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aperture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aperture"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/apertureText"
        app:layout_constraintStart_toStartOf="@+id/apertureText" />

    <EditText
        android:id="@+id/apertureText"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/ex_2_8_for_f2_8"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>